UI: Implement cluster Status and Configuration button on leftside panel and fix alignment issues.

--- a/hawk/app/assets/stylesheets/shared/_form.scss
+++ b/hawk/app/assets/stylesheets/shared/_form.scss
@@ -26,9 +26,6 @@
       }
     }
     .tab-content {
-      legend {
-        font-size: 1.2em;
-      }
       .well{
         color: #666;
         font-size: 1.0em;
@@ -94,12 +91,12 @@
       }
       .pull-right {
         .label {
-          padding: .5em .6em .5em;
+          padding: 4px 4px;
           position: static;
           z-index: 2;
         }
         .btn-xs {
-          padding: 0px 3px;
+          padding: 2px 3px 1px 3px;
         }
       }
     }
@@ -165,7 +162,7 @@ fieldset[disabled], fieldset[disabled]:active, fieldset[disabled]:focus,
 
 .daterangepicker .ranges li {
   color: #666;
-  }
+}
 
 .daterangepicker td.active, .daterangepicker td.active:hover,
 .daterangepicker .ranges li.active, .daterangepicker .ranges li:hover{
